--- a/indexPC.html
+++ b/indexPC.html
@@ -665,7 +665,7 @@
 
   <section class="hero" id="accueil">
 
-    <h1>Bienvenue sur 🌊MEDYRA🌊</h1>
+    <h1>Bienvenue sur 🌸🌺 MEDYRA 🌺🌸 </h1>
 
   </section>
 
