--- a/mobile.html
+++ b/mobile.html
@@ -192,7 +192,7 @@
   </div>
 
   <section class="hero">
-    <h1>🌊 Bienvenue sur MEDYRA 🌊</h1>
+    <h1> Bienvenue sur 🌸🌺 MEDYRA 🌺🌸 </h1>
   </section>
 
   <section class="section">
