--- a/mobile.html
+++ b/mobile.html
@@ -192,7 +192,8 @@
   </div>
 
   <section class="hero">
-    <h1> Bienvenue sur 🌸🌺 MEDYRA 🌺🌸 </h1>
+    <h1> Bienvenue sur </h1>
+    <h1>🌸🌺 MEDYRA 🌺🌸 </h1>
   </section>
 
   <section class="section">
