--- a/studio.html
+++ b/studio.html
@@ -139,14 +139,14 @@ nav ul li a:hover{ color:var(--accent); cursor:pointer; }
 
 #popupContent {
   position: absolute;
-  top: 50%;           /* centre verticalement */
-  right: 10%;         /* décalé du bord droit */
-  transform: translateY(-50%); /* corrige le centrage vertical */
-  max-width: 500px;   /* largeur de la popup */
-  width: 35%;         /* ajustable selon écran */
+  top: 50%;           
+  right: 10%;         
+  transform: translateY(-50%); 
+  max-width: 650px;   /* avant 500px, élargi à 650px */
+  width: 45%;         /* avant 35%, légèrement plus large */
   background: rgba(0,0,0,0.85);
   padding: 30px 20px 80px 20px;
-  border-radius: 12px; /* arrondi sur tous les côtés */
+  border-radius: 12px; 
   text-align: left;
   color: #fff;
   z-index: 101;
