--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@ h1{
 
   <div class="socials">
     <a href="https://discord.gg/EaGYdfAQ" target="_blank"><i class="fab fa-discord"></i> Discord</a>
-    <a href="https://www.instagram.com/collectif.medyra/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+    <a href="https://www.instagram.com/association.medyra/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
     <a href="https://www.youtube.com/@leNath_officiel" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
     <a href="https://www.twitch.tv/le_nath_" target="_blank"><i class="fab fa-twitch"></i> Twitch</a>
   </div>
