--- a/studio.html
+++ b/studio.html
@@ -244,7 +244,7 @@ nav ul li a:hover{ color:var(--accent); cursor:pointer; }
         Avec nos associés, nous travaillons chaque année pour vous proposer du contenu de qualité sur nos différents réseaux sociaux comme 
         <a href="https://www.youtube.com/@OneTeam.OneAdventure" target="_blank"><strong>YouTube</strong></a>, 
         <a href="https://www.twitch.tv/le_nath_" target="_blank"><strong>Twitch</strong></a> ou 
-        <a href="https://www.instagram.com/collectif.medyra/" target="_blank"><strong>Instagram</strong></a>, mais également des projets cinéma tels que des films ou des mini-séries.
+        <a href="https://www.instagram.com/association.medyra/" target="_blank"><strong>Instagram</strong></a>, mais également des projets cinéma tels que des films ou des mini-séries.
       </p>
       <p>
         Il est primordial pour nous de vous donner l'opportunité d'avoir un droit de regard sur nos productions afin que vous vous sentiez impliqués dans nos projets.
