--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Medyra associates</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<title>Medyra Entertainment</title>
 
-<link rel="icon" href="images/logo.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/logo.png">
+<link rel="apple-touch-icon" href="images/logo.png">
 <link href="https://fonts.googleapis.com/css2?family=Quantico:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
 
@@ -20,12 +21,14 @@
 }
 
 body{
-  overflow:hidden;
+  min-height:100vh;
+  overflow-x:hidden; /* seulement horizontal */
 }
 
 /* ===== HERO ===== */
 .hero{
-  height:100vh;
+  min-height:100vh;
+  padding:120px 20px 60px 20px; /* espace top + bas mobile */
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -36,9 +39,9 @@ body{
   background-image:url('images/fond.png');
   background-size:cover;
   background-position:center;
-  background-attachment:fixed;
 }
 
+/* overlay */
 .hero::after{
   content:"";
   position:absolute;
@@ -49,22 +52,24 @@ body{
 /* ===== HEADER TOP ===== */
 .top-brand{
   position:absolute;
-  top:40px;
+  top:25px;
   left:50%;
-  transform:translateX(-50%);
+  transform:translateX(-50%) translateY(-20px);
   z-index:2;
   text-align:center;
+
+  opacity:0;
+  transition:1s ease;
+}
+
+.top-brand.show{
+  opacity:1;
+  transform:translateX(-50%) translateY(0);
 }
 
 .top-brand img{
-  width:200px;
-  margin-bottom:10px;
-}
-
-.top-brand h2{
-  color:white;
-  font-weight:700;
-  letter-spacing:2px;
+  width:180px;
+  max-width:60vw;
 }
 
 /* ===== HERO TEXT ===== */
@@ -72,89 +77,112 @@ body{
   position:relative;
   z-index:2;
   color:white;
-  font-size:3rem;
+  font-size:clamp(1.8rem, 4vw, 3rem);
   margin-bottom:30px;
+
   opacity:0;
-  transform:translateY(30px);
-  transition:1s;
+  transform:translateY(40px) scale(0.95);
+  transition: opacity 1s ease, transform 1s ease;
 }
 
 .hero h1.show{
   opacity:1;
-  transform:translateY(0);
+  transform:translateY(0) scale(1);
 }
 
 /* ===== SOCIAL ICONS ===== */
 .hero-icons{
   display:flex;
-  gap:35px;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:30px;
   margin-bottom:40px;
   z-index:2;
 }
 
 .hero-icons a{
-  font-size:55px;
+  font-size:clamp(32px,6vw,55px);
   color:white;
-  transition:0.4s;
+  transition: transform 0.4s ease, color 0.4s ease;
 }
 
 .hero-icons a:hover{
-  transform:rotate(45deg);
-  color:#333;
+  transform:rotate(12deg) scale(1.15);
+  color:#FFD700;
 }
-
 /* ===== HUB MENU ===== */
 .hub-menu{
   z-index:2;
-  padding:35px 45px;
+  padding:30px 25px;
   border-radius:20px;
   backdrop-filter:blur(12px);
   background:rgba(255,255,255,0.08);
   border:1px solid rgba(255,255,255,0.2);
   color:white;
+  width:100%;
+  max-width:600px;
+
   opacity:0;
-  transform:translateY(20px);
-  transition:1s;
+  transform:translateY(40px) scale(0.95);
+  transition: opacity 1s ease, transform 1s ease;
 }
 
 .hub-menu.show{
   opacity:1;
-  transform:translateY(0);
-}
-
-.hub-menu h3{
-  margin-bottom:25px;
-  font-weight:700;
+  transform:translateY(0) scale(1);
 }
 
 /* ===== HUB BUTTONS ===== */
 .hub-buttons{
   display:flex;
-  gap:20px;
+  gap:15px;
   flex-wrap:wrap;
   justify-content:center;
 }
 
 .hub-buttons a{
-  padding:14px 28px;
+  padding:12px 22px;
   border-radius:10px;
   text-decoration:none;
   color:white;
   border:2px solid #FFD700;
-  transition:0.3s;
   font-size:0.95rem;
+  flex:1 1 160px;
+  text-align:center;
+
+  transition: all 0.3s ease;
 }
 
 .hub-buttons a:hover{
   background:#FFD700;
   color:black;
-  transform:translateY(-3px);
+  transform:translateY(-4px) scale(1.05);
+  box-shadow:0 10px 25px rgba(255,215,0,0.35);
 }
 
-/* ===== RESPONSIVE ===== */
+/* ===== MOBILE ===== */
 @media(max-width:768px){
-  .hero h1{ font-size:2rem; }
-  .hub-buttons{ flex-direction:column; }
+
+  .hero{
+    padding-top:140px;
+  }
+
+  .top-brand img{
+    width:140px;
+  }
+
+  .hero-icons{
+    gap:20px;
+  }
+
+  .hub-buttons{
+    flex-direction:column;
+  }
+
+  .hub-buttons a{
+    width:100%;
+  }
+
 }
 
 </style>
@@ -199,6 +227,7 @@ body{
 window.addEventListener('load',()=>{
   document.getElementById('hero-text').classList.add('show');
   document.getElementById('hub-menu').classList.add('show');
+  document.querySelector('.top-brand').classList.add('show');
 });
 </script>
 
